Fixed a few of the images names

--- a/templates/landing_storeowners.html
+++ b/templates/landing_storeowners.html
@@ -28,27 +28,27 @@
                         </div>
                         <div class="ms-sm-0 row">
                             <a class=" active ps-4 p-3 border-start border-3" id="link_sb" href="#">
-                                <img class="icon_sb" src="images/overview.png" />
+                                <img class="icon_sb" src="images/overview_sidebar_active.png" />
                                 <span>Overview</span>
                             </a>
                             <a class="ps-4 p-3 pt-4" id="link_sb" href="#">
-                                <img class="icon_sb" src="images/manage_projects.png" />
+                                <img class="icon_sb" src="images/manage_projects_sidebar.png" />
                                 <span>Manage Projects</span>
                             </a>
                             <a class="ps-4 p-3 pt-4" id="link_sb" href="#">
-                                <img class="icon_sb" src="images/view_profile.png" />
+                                <img class="icon_sb" src="images/profile_sidebar.png" />
                                 <span>View Profile</span>
                             </a>
                             <a class="ps-4 p-3 pt-4" id="link_sb" href="#">
-                                <img class="icon_sb" src="images/problem_reporting.png" />
+                                <img class="icon_sb" src="images/problem_reporting_sidebar.png" />
                                 <span>Problem Reporting</span>
                             </a>
                             <a class="ps-4 p-3 pt-4" id="link_sb" href="#">
-                                <img class="icon_sb" src="images/faq.png" />
+                                <img class="icon_sb" src="images/faq_sidebar.png" />
                                 <span>FAQ</span>
                             </a>
                             <a class="ps-4 p-3 pt-4" id="link_sb" href="#">
-                                <img class="icon_sb" src="images/logout.png" />
+                                <img class="icon_sb" src="images/logout_sidebar.png" />
                                 <span>Log out</span>
                             </a>
                         </div>
@@ -62,7 +62,7 @@
                         <span id="mnheadline">Overview</span>
                     </div>
                     <div class="col-2 text-end">
-                        <img class="me-4" src="images/notif.png" />
+                        <img class="me-4" src="images/notif_header.png" />
                     </div>
                     <div class="col-2 border-start text-end">
                         <span class="me-5" id="mnsubhead">Store Owner</span>
