--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -472,6 +472,114 @@ body {
 	margin-left: 3rem;
 }
 
+.mpbox{
+	height: 321px;
+	width: 1130px;
+	box-sizing: border-box;
+	background: #FFFFFF;
+	border: 1px solid #DFE0EB;
+	border-radius: 8px;
+	padding-top: 1.5rem;
+	padding-bottom: 3rem;
+}
+
+.mpbox .deletebtn{
+	box-shadow: 0px 4px 12px rgba(55, 81, 255, 0.24);
+	background: #3751FF;
+	width: 200px;
+	height: 42px;
+	border-radius: 8px;
+	display: block;
+	padding-top: 7px;
+	text-align: center;
+	border: 0px;
+	color: rgba(255, 255, 255, 1);
+	font-family: 'Mulish';
+	font-size: 14px;
+	letter-spacing: 0.20000000298023224;
+}
+
+.mpbox #content {
+	font-family: 'Mulish';
+	font-style: normal;
+	font-weight: 600;
+	font-size: 14px;
+	line-height: 20px;
+	letter-spacing: 0.2px;
+	display: inline-block;
+	color: #252733;
+}
+
+.mpbox #headline {
+	font-family: 'Mulish';
+	font-style: normal;
+	font-weight: bolder;
+	font-size: 19px;
+	line-height: 24px;
+	letter-spacing: 0.4px;
+	color: #252733;
+}
+
+.mpbox #link {
+	text-decoration: none;
+	font-family: 'Mulish';
+	font-style: normal;
+	font-weight: 600;
+	font-size: 14px;
+	line-height: 20px;
+	letter-spacing: 0.2px;
+	color: #3751FF;
+}
+
+.mpbox #link:hover {
+	text-decoration: underline;
+	text-decoration-color: #3751FF;
+}
+
+.mpbox #status {
+	display: inline-block;
+	font-family: 'Mulish';
+	font-style: normal;
+	font-weight: 100;
+	font-size: 14px;
+	line-height: 20px;
+	text-align: center;
+	letter-spacing: 0.2px;
+	color: #9FA2B4;
+}
+
+.mpbox #subtitle {
+	font-family: 'Mulish';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 12px;
+	line-height: 16px;
+	letter-spacing: 0.1px;
+	color: #9FA2B4;
+}
+
+#mpbtn-create{
+	background: #3751FF;
+	box-shadow: 0px 4px 12px rgba(55, 81, 255, 0.24);
+	border: none;
+	border-top-left-radius: 8px;
+	border-top-right-radius: 8px;
+	border-bottom-left-radius: 8px;
+	border-bottom-right-radius: 8px;
+	border-radius: 8px;
+	font-family: 'Mulish';
+	font-style: normal;
+	font-weight: 100;
+	font-size: 14px;
+	height: 42px;
+	line-height: 20px;
+	text-align: center;
+	letter-spacing: 0.2px;
+	color: #FFFFFF;
+	height: 48px;
+	width: 316px;
+}
+
 .pb-2{
 	padding-bottom: 0.5rem;
 }
