--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -181,7 +181,7 @@ body {
 	border-radius: 8px;
 	font-family: 'Mulish';
 	font-style: normal;
-	font-weight: 600;
+	font-weight: 100;
 	font-size: 14px;
 	height: 42px;
 	line-height: 20px;
@@ -432,6 +432,18 @@ body {
 	text-decoration-color: #3751FF;
 }
 
+.lpbox-l #status {
+	display: inline-block;
+	font-family: 'Mulish';
+	font-style: normal;
+	font-weight: 600;
+	font-size: 14px;
+	line-height: 20px;
+	text-align: right;
+	letter-spacing: 0.2px;
+	color: #9FA2B4;
+}
+
 .lpbox-l #subtitle{
 	font-family: 'Mulish';
 	font-style: normal;
@@ -584,6 +596,204 @@ body {
 	padding-bottom: 0.5rem;
 }
 
+.pbox-s-normal{
+	background: #FFFFFF;
+	border: 1px solid #DFE0EB;
+	border-radius: 8px;
+	height: 134px;
+	width: 258px;
+}
+
+.pbox-s-normal #attributecontent {
+	display: block;
+	font-family: 'Mulish';
+	font-style: normal;
+	font-weight: 700;
+	font-size: 40px;
+	line-height: 50px;
+	text-align: center;
+	letter-spacing: 1px;
+	color: #252733;
+}
+
+.pbox-s-normal #attributehead {
+	display: block;
+	font-family: 'Mulish';
+	font-style: normal;
+	font-weight: 700;
+	font-size: 19px;
+	line-height: 24px;
+	text-align: center;
+	letter-spacing: 0.4px;
+	color: #9FA2B4;
+}
+
+.pbox-s-blue{
+	background: #FFFFFF;
+	border: 1px solid #3751FF;
+	border-radius: 8px;
+	height: 134px;
+	width: 258px;
+}
+
+.pbox-s-blue #attributecontent {
+	display: block;
+	font-family: 'Mulish';
+	font-style: normal;
+	font-weight: 700;
+	font-size: 40px;
+	line-height: 50px;
+	text-align: center;
+	letter-spacing: 1px;
+	color: #3751FF;
+}
+
+.pbox-s-blue #attributehead{
+	display: inline-block;
+	font-family: 'Mulish';
+	font-style: normal;
+	font-weight: 700;
+	font-size: 19px;
+	line-height: 24px;
+	text-align: center;
+	letter-spacing: 0.4px;
+	color: #3751FF;
+}
+
+.pbox-m{
+	box-sizing: border-box;
+	background: #FFFFFF;
+	border: 1px solid #DFE0EB;
+	border-radius: 8px;
+	height: 302px;
+	padding-bottom: 40px;
+	width: 1064px;
+}
+
+.pbox-m #content {
+	display: inline-block;
+	font-family: 'Mulish';
+	font-style: normal;
+	font-weight: 600;
+	font-size: 14px;
+	line-height: 20px;
+	letter-spacing: 0.2px;
+	color: #252733;
+}
+
+.pbox-m #headline {
+	font-family: 'Mulish';
+	font-style: normal;
+	font-weight: 700;
+	font-size: 19px;
+	line-height: 24px;
+	letter-spacing: 0.4px;
+	color: #252733;
+}
+
+.pbox-m #recommendation {
+	display: inline-block;
+	font-family: 'Mulish';
+	font-style: normal;
+	font-weight: 100;
+	font-size: 14px;
+	line-height: 20px;
+	letter-spacing: 0.2px;
+	color: #9FA2B4;
+	vertical-align: middle;
+}
+
+.pbox-m #subhead {
+	font-family: 'Mulish';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 12px;
+	line-height: 16px;
+	letter-spacing: 0.1px;
+	color: #9FA2B4;
+}
+
+.pbox-l{
+	box-sizing: border-box;
+	background: #FFFFFF;
+	border: 1px solid #DFE0EB;
+	border-radius: 8px;
+	height: 467px;
+	padding-bottom: 30px;
+	width: 1064px;
+}
+
+.pbox-l #content{
+	display: inline-block;
+	font-family: 'Mulish';
+	font-style: normal;
+	font-weight: 600;
+	font-size: 14px;
+	line-height: 20px;
+	letter-spacing: 0.2px;
+	color: #252733;
+}
+
+.pbox-l #headline{
+	font-family: 'Mulish';
+	font-style: normal;
+	font-weight: 700;
+	font-size: 19px;
+	line-height: 24px;
+	letter-spacing: 0.4px;
+	color: #252733;
+}
+
+.pbox-l #recommendation{
+	display: inline-block;
+	font-family: 'Mulish';
+	font-style: normal;
+	font-weight: 100;
+	font-size: 14px;
+	line-height: 20px;
+	letter-spacing: 0.2px;
+	color: #9FA2B4;
+	vertical-align: middle;
+}
+
+.pbox-l #subhead{
+	font-family: 'Mulish';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 12px;
+	line-height: 16px;
+	letter-spacing: 0.1px;
+	color: #9FA2B4;
+}
+
+#pbutton{
+	background: #3751FF;
+	border: none;
+	box-shadow: 0px 4px 12px rgba(55, 81, 255, 0.24);
+	border-radius: 8px;
+	color: #FFFFFF;
+	font-family: 'Mulish';
+	font-style: normal;
+	font-weight: 100;
+	font-size: 14px;
+	height: 42px;
+	line-height: 20px;
+	text-align: center;
+	letter-spacing: 0.2px;
+	padding: 5px 0;
+	width: 200px;
+}
+
+#pheadline{
+	font-family: 'Mulish';
+	font-style: normal;
+	font-weight: 700;
+	font-size: 19px;
+	line-height: 24px;
+	letter-spacing: 0.4px;
+	color: #252733;
+}
+
 ::placeholder{
 	font-family: 'Mulish';
 	font-style: normal;
@@ -629,7 +839,6 @@ body {
 	font-family:Mulish;
 	font-size:14px;
 	letter-spacing:0.20000000298023224;
-	line-height:px;
 }
 
 .pysquare{
@@ -717,10 +926,9 @@ body {
   	text-align: center;
 	border: 0px;
 	color:rgba(255, 255, 255, 1);
-	font-family:Mulish;
+	font-family: 'Mulish';
 	font-size:14px;
 	letter-spacing:0.20000000298023224;
-	line-height:px;
 }
 
 #rdinput{
@@ -849,6 +1057,17 @@ select:invalid, select option[value=""]{
 
 .sidebar #img_sb{
 	margin-right: 7px;
+}
+
+#testhead{
+	display: inline-block;
+	font-family: 'Mulish';
+	font-style: normal;
+	font-weight: 700;
+	font-size: 19px;
+	line-height: 24px;
+	letter-spacing: 0.4px;
+	color: #252733;
 }
 
 #tna{
