update section for store owners

--- a/templates/create_project.html
+++ b/templates/create_project.html
@@ -29,7 +29,7 @@
                         </div>
                     </div>
                     <div class="ms-sm-0 row">
-                        <a class="ps-4 p-3 pb-4" id="link_sb" href="#">
+                        <a class="ps-4 p-3 pb-4" id="link_sb" href="/projectoverview">
                             <img class="icon_sb" src="images/overview_sidebar.png" />
                             <span>Overview</span>
                         </a>
