--- a/templates/landing_storeowners.html
+++ b/templates/landing_storeowners.html
@@ -31,7 +31,7 @@
                                 <img class="icon_sb" src="images/overview_sidebar_active.png" />
                                 <span>Overview</span>
                             </a>
-                            <a class="ps-4 p-3 pt-4" id="link_sb" href="#">
+                            <a class="ps-4 p-3 pt-4" id="link_sb" href="/manageprojects">
                                 <img class="icon_sb" src="images/manage_projects_sidebar.png" />
                                 <span>Manage Projects</span>
                             </a>
@@ -47,7 +47,7 @@
                                 <img class="icon_sb" src="images/faq_sidebar.png" />
                                 <span>FAQ</span>
                             </a>
-                            <a class="ps-4 p-3 pt-4" id="link_sb" href="#">
+                            <a class="ps-4 p-3 pt-4" id="link_sb" href="/logout">
                                 <img class="icon_sb" src="images/logout_sidebar.png" />
                                 <span>Log out</span>
                             </a>
@@ -90,19 +90,19 @@
                         <!-- third row -->
                         <div class="row">
                             <div class="col-4 mb-3 border-bottom">
-                                <span class="ms-3" id="content">Name: Store Owner</span>
+                                <span class="ms-3" id="content">Name: {{ store_owner_information["name"] }}</span>
                             </div>
                             <div class="col-8 mb-3 border-bottom">
-                                <span id="content">Name: Store</span>
+                                <span id="content">Name: {{ store_owner_information["company"] }}</span>
                             </div>
                         </div>
                         <!-- fourth row -->
                         <div class="row">
                             <div class="col-4 border-bottom">
-                                <span class="ms-3 mt-2" id="content">Email: StoreOwner@gmail.com</span>
+                                <span class="ms-3 mt-2" id="content">Email: {{ store_owner_information["email"] }}</span>
                             </div>
                             <div class="col-8 border-bottom">
-                                <span class="mt-2" id="content">Store URL: store.com</span>
+                                <span class="mt-2" id="content">Store URL: {{ store_owner_information["url"] }}</span>
                             </div>
                         </div>
                     </div>
@@ -118,19 +118,21 @@
                                         <span class="ms-3" id="headline">All Projects</span>
                                     </div>
                                     <div class="col" style="text-align: right;">
-                                        <a href="#" id="link">View Details</a>
+                                        <a href="/manageprojects" id="link">View Details</a>
                                     </div>
                                 </div>
+								{%	for n in range(0,2)	%}
                                 <!-- second row -->
                                 <div class="row">
                                     <div class="col border-bottom">
-                                        <span class="pt-4 ms-3" id="content">Project 1</span>
+                                        <span class="pt-4 ms-3" id="content">{{ all_project[n]["pname"] }}</span>
                                     </div>
                                     <div class="col border-bottom" style="text-align: right;">
-                                        <span class="pt-4" id="status">Good</span>
+                                        <span class="pt-4" id="status">{{ all_project[n]["rating"] }}</span>
                                     </div>
-                                </div>
-                                <!-- third row -->
+                                </div>								
+								{%	endfor	%}
+                                <!-- third row 
                                 <div class="row">
                                     <div class="col border-bottom">
                                         <span class="pt-4 ms-3" id="content">Project 2</span>
@@ -138,7 +140,8 @@
                                     <div class="col border-bottom" style="text-align: right;">
                                         <span class="pt-4" id="status">Bad</span>
                                     </div>
-                                </div>
+                                </div>-->
+								
                             </div>
                         </div>
                         <!-- third box -->
