--- a/templates/manage_project.html
+++ b/templates/manage_project.html
@@ -29,7 +29,7 @@
                         </div>
                     </div>
                     <div class="ms-3 row">
-                        <a class="ps-4 p-3 pb-4" id="link_sb" href="#">
+                        <a class="ps-4 p-3 pb-4" id="link_sb" href="/projectoverview">
                             <img class="icon_sb" src="images/overview_sidebar.png" />
                             <span>Overview</span>
                         </a>
@@ -49,7 +49,7 @@
                             <img class="icon_sb" src="images/faq_sidebar.png" />
                             <span>FAQ</span>
                         </a>
-                        <a class="ps-4 p-3 pt-4" id="link_sb" href="#">
+                        <a class="ps-4 p-3 pt-4" id="link_sb" href="/logout">
                             <img class="icon_sb" src="images/logout_sidebar.png" />
                             <span>Log out</span>
                         </a>
@@ -71,67 +71,35 @@
                 </div>
             </div>
             <div class="row pt-5">
+			<form action="/createproject">
                 <button class="ms-3" id="mpbtn-create">Create New Project</button>
+				
+			</form>
             </div>
-            <div class="container pt-4">
-                <!-- first box -->
-                <div class="container pb-2">
-                    <div class="row mpbox">
-                        <div class="row">
-                            <div class="col">
-                                <span class="ms-3" id="mnheadline">Project Name 1</span>
-                            </div>
-                            <div class="col text-end">
-                                <a id="link" href="#">View Details</a>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <span class="ms-3 pt-2" id="subtitle">Type of Project: Shoes</span>
-                        </div>
-                        <div class="row">
-                            <div class="col border-bottom">
-                                <span class="pt-4 ms-3 pb-3" id="content">Overall Rating</span>
-                            </div>
-                            <div class="col border-bottom text-end">
-                                <span class="pt-4 pb-3" id="status">Good</span>
-                            </div>
-                        </div>
-                        <div class="row pb-5">
-                            <div class="col border-bottom">
-                                <span class="pt-4 ms-3 pb-3" id="content">Performance</span>
-                            </div>
-                            <div class="col border-bottom text-end">
-                                <span class="pt-4 pb-3" id="status">Good</span>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-9"></div>
-                            <div class="col-3">
-                                <button class="ms-lg-5 deletebtn">Delete Project</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
                 <!-- second box -->
+				{%	for n in range(0,project_lists | length)	%}
+					{% if project_lists | length == 0%}
+					No project currently...
+					{{ project_lists[n]["answer"]["answer"] }}
                 <div class="container pt-4">
                     <div class="row mpbox">
                         <div class="row">
                             <div class="col">
-                                <span class="ms-3" id="mnheadline">Project Name 2</span>
+                                <span class="ms-3" id="mnheadline">{{ project_lists[n]["pname"] }}</span>
                             </div>
                             <div class="col text-end">
-                                <a id="link" href="#">View Details</a>
+                                <a id="link" href="/projectdetails/{{ project_lists[n]['id'] }}">View Details</a> <!--need to figure a way to set the project details to display-->
                             </div>
                         </div>
                         <div class="row">
-                            <span class="ms-3 pt-2" id="subtitle">Type of Project: Bags</span>
+                            <span class="ms-3 pt-2" id="subtitle">Type of Project: {{ project_lists[n]["category"] }}</span>
                         </div>
                         <div class="row">
                             <div class="col border-bottom">
                                 <span class="pt-4 ms-3 pb-3" id="content">Overall Rating</span>
                             </div>
                             <div class="col border-bottom text-end">
-                                <span class="pt-4 pb-3" id="status">Could be better</span>
+                                <span class="pt-4 pb-3" id="status">{{ project_lists[n]["rating"] }}</span>
                             </div>
                         </div>
                         <div class="row pb-5">
@@ -139,17 +107,20 @@
                                 <span class="pt-4 ms-3 pb-3" id="content">Performance</span>
                             </div>
                             <div class="col border-bottom text-end">
-                                <span class="pt-4 pb-3" id="status">Bad</span>
+                                <span class="pt-4 pb-3" id="status">{{ project_lists[n]["performance"] }}</span>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-9"></div>
                             <div class="col-3">
-                                <button class="ms-lg-5 deletebtn">Delete Project</button>
+							<form action="/deleteproject" method="POST">
+                                <button class="ms-lg-5 deletebtn" name="deleteProject" value="{{ project_lists[n]['id'] }}">Delete Project</button>
+							</form>
                             </div>
                         </div>
                     </div>
                 </div>
+				{%	endfor	%}
             </div>
         </div>
     </div>
