fix for manage projects

--- a/templates/manage_project.html
+++ b/templates/manage_project.html
@@ -80,7 +80,7 @@
 				{%	for n in range(0,project_lists | length)	%}
 					{% if project_lists | length == 0%}
 					No project currently...
-					{{ project_lists[n]["answer"]["answer"] }}
+					{% endif %}
                 <div class="container pt-4">
                     <div class="row mpbox">
                         <div class="row">
