--- a/templates/create_project.html
+++ b/templates/create_project.html
@@ -76,7 +76,7 @@
 
             <div class="container pt-2">
                 <div class="row cpbox">
-                    <form>
+                    <form method="POST" action="/createproject">
                         <!-- first row -->
                         <div class="row pb-4">
                             <span class="ms-3" id="headline">Enter Item Details</span>
@@ -84,17 +84,17 @@
                         <!-- second row -->
                         <div class="row">
                             <span class="ms-3 pb-2" id="inputhead">Project Name</span>
-                            <input class="ms-4 cpinput-l" type="text" placeholder="Name">
+                            <input class="ms-4 cpinput-l" type="text" placeholder="Name" name="pname">
                         </div>
                         <!-- third row -->
                         <div class="row pt-3 pb-3">
                             <div class="col">
-                                <span class="ms-3 pb-2" id="inputhead">Category</span>
-                                <input class="ms-sm-3 ps-2 cpinput-s" type="text" placeholder="Price">
+                                <span class="ms-3 pb-2" id="inputhead" >Category</span>
+                                <input class="ms-sm-3 ps-2 cpinput-s" type="text" placeholder="Category" name="category">
                             </div>
                             <div class="col">
                                 <span class="pb-2" id="inputhead">Website URL</span>
-                                <input class="ps-2 cpinput-s" type="text" placeholder="URL">
+                                <input class="ps-2 cpinput-s" type="text" placeholder="URL" name="url">
                             </div>
                         </div>
                         <!-- fourth row -->
