--- a/templates/landing_storeowners.html
+++ b/templates/landing_storeowners.html
@@ -125,10 +125,10 @@
                                 <!-- second row -->
                                 <div class="row">
                                     <div class="col border-bottom">
-                                        <span class="pt-4 ms-3" id="content">{{ all_project[n]["pname"] }}</span>
+                                        <span class="pt-4 ms-3" id="content">{{ all_projects[n]["pname"] }}</span>
                                     </div>
                                     <div class="col border-bottom" style="text-align: right;">
-                                        <span class="pt-4" id="status">{{ all_project[n]["rating"] }}</span>
+                                        <span class="pt-4" id="status">{{ all_projects[n]["rating"] }}</span>
                                     </div>
                                 </div>								
 								{%	endfor	%}
