minor fix to projects

--- a/templates/create_project.html
+++ b/templates/create_project.html
@@ -67,7 +67,7 @@
                     <img class="me-4" src="images/notif_header.png" />
                 </div>
                 <div class="col-2 border-start text-end">
-                    <span class="me-5" id="mnsubhead">Store Owner</span>
+                    <span class="me-5" id="mnsubhead">{{ fullname }}</span>
                 </div>
             </div>
             <div class="row pt-4">
