--- a/templates/landing_storeowners.html
+++ b/templates/landing_storeowners.html
@@ -65,7 +65,7 @@
                         <img class="me-4" src="images/notif_header.png" />
                     </div>
                     <div class="col-2 border-start text-end">
-                        <span class="me-5" id="mnsubhead">Store Owner</span>
+                        <span class="me-5" id="mnsubhead">{{ store_owner_information["name"] }}</span>
                     </div>
                 </div>
                 <!-- first box -->
@@ -77,7 +77,7 @@
                                 <span class="ms-3" id="headline">Welcome Store Owner</span>
                             </div>
                             <div class="col-8" style="text-align: right;">
-                                <a href="#" id="link">Update Information</a>
+                                <a href="/userprofile" id="link">Update Information</a>
                             </div>
                         </div>
                         <!-- second row -->
@@ -157,7 +157,7 @@
                                         <span class="ms-3" id="headline">Problems reported</span>
                                     </div>
                                     <div class="col" style="text-align: right;">
-                                        <a href="#" id="link">Report Problem</a> 
+                                        <a href="/reportaproblem" id="link">Report Problem</a> 
                                     </div>
                                 </div>
                                 <!-- second row -->
