--- a/templates/manage_project.html
+++ b/templates/manage_project.html
@@ -67,7 +67,7 @@
                     <img class="me-4" src="images/notif_header.png" />
                 </div>
                 <div class="col-2 border-start text-end">
-                    <span class="me-5" id="mnsubhead">Store Owner</span>
+                    <span class="me-5" id="mnsubhead">{{ fullname }}</span>
                 </div>
             </div>
             <div class="row pt-5">
@@ -88,7 +88,7 @@
                                 <span class="ms-3" id="mnheadline">{{ project_lists[n]["pname"] }}</span>
                             </div>
                             <div class="col text-end">
-                                <a id="link" href="/projectdetails/{{ project_lists[n]['id'] }}">View Details</a> <!--need to figure a way to set the project details to display-->
+                                <a id="link" href="/project/{{ project_lists[n]['id'] }}">View Details</a> <!--need to figure a way to set the project details to display-->
                             </div>
                         </div>
                         <div class="row">
